<resources>
    <string name="app_name">Face Scan Payment</string>

    <!--  auth  -->
    <string name="txt_login">Đăng nhập</string>
    <string name="txt_register">Đăng ký</string>
    <string name="txt_account">Tài khoản</string>
    <string name="txt_password">Mật khẩu</string>
    <string name="txt_verified_password">Nhập lại mật khẩu</string>
    <string name="txt_save_account">Lưu tài khoản</string>
    <string name="txt_forget_password">Quên mật khẩu?</string>
    <string name="btn_login">@string/txt_login</string>
    <string name="txt_or_continue_with">hoặc tiếp tục với</string>
    <string name="txt_phone">Số điện thoại</string>
    <string name="txt_email">Email</string>
    <string name="des_techno_logo">Techno\'s Logo</string>
    <string name="txt_register_now">Đăng ký ngay</string>
    <string name="desc_login_with_fingerprint">Đăng nhập với vân tay</string>
    <string name="txt_privacy_and_requirement_1">Tôi đông ý</string>
    <string name="txt_privacy_and_requirement_2">và</string>
    <string name="txt_privacy">chính sách bảo mật</string>
    <string name="txt_requirement">điều khoản</string>
    <string name="txt_have_account">Đã có tài khoản?</string>
    <string name="txt_first_name">Tên</string>
    <string name="txt_last_name">Họ</string>
    <string name="txt_to_login">Đăng nhập</string>
    <string name="txt_gender_male">Nam</string>
    <string name="txt_gender_female">Nữ</string>
    <string name="txt_gender_other">Khác</string>
    <string name="txt_gender">Giới tính</string>
    <string name="et_hint_enter_name">Enter the person\'s name</string>
    <string name="btn_choose_photos">Choose Photos</string>
    <string name="btn_add_to_database">Add to Database</string>
    <string name="btn_switch_camera">Switch Camera</string>
    <string name="btn_capture">Capture</string>
    <string name="btn_retry">Retry</string>
    <string name="sample__item_price">25.000d</string>
    <string name="sample__product_name">Product Name</string>
    <string name="sample__item_image">Product Image</string>
    <string name="nav_shop">Shop</string>
    <string name="nav_face_detector">Face Detector</string>
    <string name="nav_face_register">Face Register</string>
    <string name="n_trang_c_a_h_ng">Đến trang cửa hàng</string>
    <string name="ng_k_khu_n_m_t">Đăng ký khuôn mặt</string>
    <string name="x_c_th_c_khu_n_m_t">Xác thực khuôn mặt</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="xin_ch_o">Xin chào,</string>
    <string name="user_example_com">user@example.com</string>
    <string name="sl_100">SL: 100</string>
    <string name="back">Back</string>
    <string name="techno_store">Techno Store</string>
    <string name="mua_h_ng">Mua Hàng</string>
    <string name="cart">Cart</string>
    <string name="cart_badge">0</string>
    <string name="gi_h_ng">Giỏ hàng</string>
    <string name="thanh_to_n">Thanh Toán</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="gi_h_ng_c_m_th_y_c_n">Giỏ hàng cảm thấy cô đơn!</string>
    <string name="cart_empty_2">Ghé thăm cửa hàng và chọn sản phẩm ưng ý cho mình các Technieeeee ơi!</string>
    <string name="ti_p_t_c_mua_s_m">Tiếp tục mua sắm</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="t_ng_c_ng">Tổng cộng:</string>
    <string name="_2_500_000">2.500.000đ</string>
    <string name="et_notify2">Các Technie nhấn nút bên dưới \nđể trở về trang chính nha!</string>
    <string name="et_notify1">Thành công</string>
    <string name="completed">Completed</string>
    <string name="tv_thanh_to_n">Thanh toán</string>
    <string name="btn_x_c_th_c_khu_n_m_t">Xác thực khuôn mặt</string>
</resources>