<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootItemLayout"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginHorizontal="@dimen/_12dp"
    android:layout_marginBottom="@dimen/_4dp"
    app:cardCornerRadius="@dimen/_24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/_12dp">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/sample__item_image"
            android:padding="@dimen/_8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_techo_without_text"
            android:transitionName="productImage"
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="@dimen/_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="@dimen/_52dp"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/sample__product_name"
            android:textAlignment="textStart"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgProduct"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tvProductPrice"
            app:layout_constraintStart_toEndOf="@+id/imgProduct">

            <ImageButton
                android:id="@+id/btnDecreaseQuantity"
                android:layout_width="@dimen/_40dp"
                android:layout_height="@dimen/_40dp"
                android:backgroundTint="@color/button_secondary"
                android:contentDescription="@string/decrease"
                android:src="@drawable/ic_minus" />

            <EditText
                android:id="@+id/etQuantity"
                android:layout_width="@dimen/_48dp"
                android:layout_height="@dimen/_40dp"
                android:layout_marginHorizontal="@dimen/_4dp"
                android:text="01"
                android:textAlignment="center"
                android:textColor="@color/secondary"
                android:textSize="18sp"
                android:textStyle="normal" />

            <ImageButton
                android:id="@+id/btnIncreaseQuantity"
                android:layout_width="@dimen/_40dp"
                android:layout_height="@dimen/_40dp"
                android:backgroundTint="@color/button_secondary"
                android:contentDescription="@string/increase"
                android:src="@drawable/ic_add" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/sample__item_price"
            android:textAlignment="textEnd"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgProduct" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
